# async-dashscope

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: base.md  qwen-image-edit.md  websocket.md
examples/: asr-websocket.rs  asr_websocket.rs  chat.rs  deepseek-r1-stream.rs  deepseek-r1.rs  file-operations.rs  file-upload.rs  fine-tune.jsonl  function-call.rs  glm.rs  json_output.rs  multimodal-generation-stream.rs  multimodal-generation.rs  qwen-image-edit.rs  qwen-mt-image.rs  qwen-mt-stream.rs  qwen-mt.rs  qwen-tts-stream.rs  qwen-tts.rs  qwen3-thinking.rs  roles.rs  test.txt  text-embedding.rs  text-generation-stream.rs  text-generation.rs  text2image.rs  websocket_asr.rs  websocket_tts.rs  websocket_tts_sambert.rs
src/: client.rs  config.rs  error.rs  lib.rs  oss_util.rs
src/operation/: audio.rs  common.rs  embeddings.rs  generation.rs  image2image.rs  mod.rs  multi_modal_conversation.rs  multimodal_generation.rs  request.rs  task.rs  text2image.rs  validate.rs  ws_client.rs
src/operation/audio/: mod.rs
src/operation/audio/asr/: client.rs  customization.rs  mod.rs  output.rs  param.rs
src/operation/audio/tts/: mod.rs  output.rs  param.rs
src/operation/audio/ws/: mod.rs  output.rs  param.rs
src/operation/embeddings/: input.rs  output.rs  param.rs
src/operation/file/: mod.rs  output.rs  param.rs
src/operation/generation/: _generation_input.rs  _generation_output.rs  input.rs  output.rs  param.rs
src/operation/image2image/: output.rs  param.rs
src/operation/multi_modal_conversation/: input.rs  output.rs  param.rs
src/operation/multimodal_generation/: input.rs  output.rs
src/operation/task/: output.rs
src/operation/text2image/: output.rs  param.rs
tests/: integration_test.rs  test-text-generation.rs  test_customization.rs
tests/common/: mod.rs
