[package]
name = "async-dashscope"
version = "0.7.0"
edition = "2024"
description = "A Rust client for DashScope API"
repository = "https://github.com/kingzcheung/async-dashscope"
authors = ["kingzcheung <kingzcheung@gmail.com>"]
categories = ["api-bindings", "web-programming", "asynchronous"]
rust-version = "1.85"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/kingzcheung/async-dashscope"

[dependencies]
derive_builder = "0.20.2"
reqwest-eventsource = "0.6.0"
thiserror = "2.0.12"
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = "1.0.140"
tracing = "0.1.41"
bytes = "1.10.1"
reqwest = { version = "0.12.22", features = [
  "json",
  "stream",
  "multipart",
], default-features = false }
secrecy = { version = "0.10.3", features = ["serde"] }
backoff = { version = "0.4.0", features = ["tokio"] }
tokio = { version = "1.46.1", features = ["full"] }
tokio-stream = "0.1.17"
tokio-util = { version = "0.7.15", features = ["codec", "io-util"] }
async-stream = "0.3.6"
url = "2.5.4"
base64 = "0.22.1"
hound = {version = "3.5.1",optional = true}

[dev-dependencies]
dotenvy ={ version = "0.15.7"}

[features]
default = ["rustls","wav-decoder"]
# Enable rustls for TLS support
rustls = ["reqwest/rustls-tls-native-roots"]

native-tls = ["reqwest/native-tls"]

wav-decoder = ["hound"]